Fix Most of Loc Error Spam

--- a/localization/english/missions/thuc_phan_missions_ti_l_english.yml
+++ b/localization/english/missions/thuc_phan_missions_ti_l_english.yml
@@ -105,3 +105,31 @@
  me_thuc_phan_12_desc: ""
  me_thuc_phan_12.a: ""
 
+ #Bloodline
+ bloodline_thuc_phan: "Blood of Thuc Phan"
+ bloodline_thuc_phan_desc: ""
+ 
+ #Modifiers
+ thuc_phan_rice: "Rice Farming"
+ desc_thuc_phan_rice: ""
+ thuc_phan_military_mod: "March of Thuc Phan"
+ desc_thuc_phan_military_mod: ""
+ co_lao_citadel: "Co Lao Citadel"
+ desc_co_lao_citadel: ""
+ au_lac_formation: "Formation of Au Lac"
+ desc_au_lac_formation: ""
+ 
+ #Formable
+ AU_LAC_FORMABLE: "Au Lac"
+ AU_LAC_ADJECTIVE: "Au Lacan"
+ 
+ #Treasure
+ kim_quy_turtle: "Claw of Kim Quy"
+ kim_quy_turtle_desc: ""
+ 
+ #Tooltips
+ thuc_phan_missions_task_4_thuc_phan_becomes_ruler: "Thuc Phan becomes ruler of our country."
+ thuc_phan_missions_task_4_claims: "TODO CLAIM TT"
+ thuc_phan_missions_task_6_at_war_with_hung: "Be at war with the Hung Kings of Van Lang."
+ thuc_phan_missions_task_6_claims: "TODO CLAIM TT"
+ thuc_phan_missions_task_8_claims: "TODO CLAIM TT"
