Luandi Family + Bugfixes

--- a/localization/english/missions/xiongnu_missions_ti_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_ti_l_english.yml
@@ -193,3 +193,5 @@
  xiongnu_missions_01_task_15_claims_tt: "TODO CLAIMS TT"
  xiongnu_missions_01_task_18_send_emissaries: "We will send emissaries to Chinese rulers."
  xiongnu_missions_01_task_20_modun_is_ruler: "Modun is ruler."
+ xiongnu_missions_01_task_2_tt_family_check: "Our ruler's family is the Luandi family."
+ xiongnu_missions_01_task_3_spouse_with_reqs_exists: "Our ruler has a spouse younger than 30 years, who has Xiongnu culture and Tengri religion."
