Raiders of the Lost Ark Military Chain

--- a/localization/english/events/FMO_CFT_event_chains_l_english.yml
+++ b/localization/english/events/FMO_CFT_event_chains_l_english.yml
@@ -170,3 +170,67 @@
  lifestyle_event_chains.35.t: "TODO"
  lifestyle_event_chains.35.desc: "TODO"
  lifestyle_event_chains.35.a: "TODO"
+ 
+##############################################################################################################################################################
+# Military - Raiders of the Lost Ark
+##############################################################################################################################################################
+ lifestyle_event_chains.36.t: "TODO"
+ lifestyle_event_chains.36.desc: "TODO"
+ lifestyle_event_chains.36.a: "TODO"
+ lifestyle_event_chains.36.b: "TODO"
+ lifestyle_event_chains.36.c: "TODO"
+ 
+ lifestyle_event_chains.37.t: "TODO"
+ lifestyle_event_chains.37.desc: "TODO"
+ lifestyle_event_chains.37.a: "TODO"
+ lifestyle_event_chains.37.b: "TODO"
+ 
+ lifestyle_event_chains.38.t: "TODO"
+ lifestyle_event_chains.38.desc: "TODO"
+ lifestyle_event_chains.38.a: "TODO"
+ 
+ lifestyle_event_chains.39.t: "TODO"
+ lifestyle_event_chains.39.desc: "TODO"
+ lifestyle_event_chains.39.a: "TODO"
+ 
+ lifestyle_event_chains.40.t: "TODO"
+ lifestyle_event_chains.40.desc: "TODO"
+ lifestyle_event_chains.40.a: "TODO"
+ lifestyle_event_chains.40.b: "TODO"
+
+ lifestyle_event_chains.41.t: "TODO"
+ lifestyle_event_chains.41.desc: "TODO"
+ lifestyle_event_chains.41.a: "TODO"
+ lifestyle_event_chains.41.b: "TODO"
+
+ lifestyle_event_chains.42.t: "TODO"
+ lifestyle_event_chains.42.desc: "TODO"
+ lifestyle_event_chains.42.a: "TODO"
+ lifestyle_event_chains.42.b: "TODO"
+
+ lifestyle_event_chains.43.t: "TODO"
+ lifestyle_event_chains.43.desc: "TODO"
+ lifestyle_event_chains.43.a: "TODO"
+ lifestyle_event_chains.43.b: "TODO"
+
+ lifestyle_event_chains.44.t: "TODO"
+ lifestyle_event_chains.44.desc: "TODO"
+ lifestyle_event_chains.44.a: "TODO"
+
+ lifestyle_event_chains.45.t: "TODO"
+ lifestyle_event_chains.45.desc: "TODO"
+ lifestyle_event_chains.45.a: "TODO"
+ lifestyle_event_chains.45.b: "TODO"
+
+ lifestyle_event_chains.46.t: "TODO"
+ lifestyle_event_chains.46.desc: "TODO"
+ lifestyle_event_chains.46.a: "TODO"
+
+ lifestyle_event_chains.47.t: "TODO"
+ lifestyle_event_chains.47.desc: "TODO"
+ lifestyle_event_chains.47.a: "TODO"
+
+ lifestyle_event_chains.48.t: "TODO"
+ lifestyle_event_chains.48.desc: "TODO"
+ lifestyle_event_chains.48.a: "TODO"
+
