--- a/localization/english/missions/03_tibet_mission_l_english.yml
+++ b/localization/english/missions/03_tibet_mission_l_english.yml
@@ -28,7 +28,7 @@
 03_tibet_mission_task_7: "Forced Marching In Mountains"
 03_tibet_mission_task_7_DESC: "Although we know that our levies will complain bitterly, we have decided to make them march through the mountains every summer. We need to make sure that our men are always in fighting shape and this is one of the best ways to do so. Our forces will emulate the example of our #T Legion#!, who stand head and shoulders above all others. \n\n\n\n\n\n\n\n\n\n@persia_mil11!"
 
-03_tibet_mission_task_8: "Himalayan Cities"
+03_tibet_mission_task_8: "Xiyu Cities"
 03_tibet_mission_task_8_DESC: "Now that our highways are finished, the time has come to turn our attention towards the building of cities. There is much work to be done, but we shall not let the enormity of the task deter us. \n\n\n\n\n\n\n\n\n\n@india_mil17!"
 
 03_tibet_mission_task_9: "Tibetan Towns"
@@ -114,10 +114,10 @@ me_tibet_7_tooltip: "The mission task '#Y $03_tibet_mission_task_7$#!' has now b
 me_tibet_7_tt: "We must have a #T Legion#! with at least #Y 6#! #G Light Infantry#! subunits and #Y 3#! #T Legion Distinctions#!."
 
 me_tibet_8_title: "$03_tibet_mission_task_8$"
-me_tibet_8_desc: "Over time, we have invested in building cities throughout the #E Himalayan#! region, and although some in [ROOT.GetCountry.GetCapital.GetName] have complained about the costs associated with constructing cities in the mountains, their voices were overruled and the work went through.\n\nMany years later, now that this vision has proven to be successful, everyone is pretending that they agreed with [ROOT.GetCountry.GetRuler.GetName]'s plan all along."
+me_tibet_8_desc: "Over time, we have invested in building cities throughout the wealthy #E Xiyu#! region, and although some in [ROOT.GetCountry.GetCapital.GetName] have complained about the costs associated with constructing cities far from our capital, their voices were overruled and the work went through.\n\nMany years later, now that this vision has proven to be successful, everyone is pretending that they agreed with [ROOT.GetCountry.GetRuler.GetName]'s plan all along."
 me_tibet_8.a: "Eh, I don't mind...but I will remember those who did not believe in me"
 me_tibet_8_tooltip: "The mission task '#Y $03_tibet_mission_task_8$#!' has now been #G Completed#!!"
-03_tibet_mission_task_8_tt: "We need at least #Y 5#! #T Cities#! in the #Y Himalaya#! Region."
+03_tibet_mission_task_8_tt: "We need at least #Y 5#! #T Cities#! in the #Y Xiyu#! Region."
 
 me_tibet_9_title: "$03_tibet_mission_task_9$"
 me_tibet_9_desc: "We received news this morning in [ROOT.GetCountry.GetCapital.GetName] that our campaign to build cities throughout the #E Tibet#! region has finished, and our people are eternally grateful for us investing in their homelands, with many personally believing that [ROOT.GetCountry.GetRuler.GetName] was the sole person responsible for making this all happen."
