--- a/localization/english/missions/yan_missions_l_english.yml
+++ b/localization/english/missions/yan_missions_l_english.yml
@@ -173,18 +173,26 @@
  me_yan_1904_title:0 "$yan_missions_task_19$"
  me_yan_1904_desc:0 ""
  me_yan_1904.a:0 ""
+ 
+ me_yan_1905_title:0 "$yan_missions_task_19$"
+ me_yan_1905_desc:0 ""
+ me_yan_1905.a:0 ""
+ 
+ me_yan_1906_title:0 "$yan_missions_task_19$"
+ me_yan_1906_desc:0 ""
+ me_yan_1906.a:0 ""
 
 
  #Modifiers
- rebuilt_yan_mod: "TODO"
- yan_donghu_strategies: "TODO"
- yan_coalition_mod: "TODO"
- yan_iron_mod: "TODO"
- byjing_yan_mod: "TODO"
- qinged_qi: "TODO"
- assassinate_qin_as_yan: "TODO"
- northern_wall_yan: "TODO"
- northern_wall_yan_province_mod: "TODO"rebuilt_yan_mod: "TODO"
+ rebuilt_yan_mod: "Rebuilt Yan"
+ yan_donghu_strategies: "Donghu Strategies"
+ yan_coalition_mod: "Coalition Formed"
+ yan_iron_mod: "Iron for our Army"
+ byjing_yan_mod: "Cradle of a Huge Capital"
+ qinged_qi: "Destroyed Qi"
+ assassinate_qin_as_yan: "Assassinated Emperor"
+ northern_wall_yan: "Built Northern Wall"
+ northern_wall_yan_province_mod: "Northern Wall"
  desc_yan_donghu_strategies: "TODO"
  desc_yan_coalition_mod: "TODO"
  desc_yan_iron_mod: "TODO"
@@ -193,6 +201,7 @@
  desc_assassinate_qin_as_yan: "TODO"
  desc_northern_wall_yan: "TODO"
  desc_northern_wall_yan_province_mod: "TODO"
+ desc_rebuilt_yan_mod: "TODO"
  
  #Treasure:
  yan_royal_bronzeware: "Royal Bronzeware"
