--- a/localization/english/00_TODO_l_english.yml
+++ b/localization/english/00_TODO_l_english.yml
@@ -312,6 +312,7 @@ yan_start: "#T Yan#!\nDifficulty: #Y Medium#!\n\n$yan_heritage_desc$"
 xiongnu_start: "#T Xiongnu#!\nDifficulty: #Y Medium#!\n\n TODO Zorgo2coopius"
 nam_cuong_start: "#T Nam Cuong#!\nDifficulty: #Y Medium#!\n\n TODO Zorgo2coopius"
 sushen_start: "#T Sushen#!\nDifficulty: #Y Medium#!\n\n$sushen_heritage_desc$"
+wei_start: "#T Wei#!\nDifficulty: #Y Medium#!\n\n$wei_heritage_desc$"
 
 #AOS GOVERNMENTS
 chinese_empire:0 "Chinese Empire"
