Update Xiongnu - Only Duel Missing

--- a/localization/english/missions/xiongnu_missions_ti_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_ti_l_english.yml
@@ -8,64 +8,64 @@
 #Missions
 
  xiongnu_missions_01_task_1: "Consolidate our Clans"
- xiongnu_missions_01_DESC: ""
+ xiongnu_missions_01_task_1_DESC: ""
 
  xiongnu_missions_01_task_2: "Loyalty to Luandi"
- xiongnu_missions_01_DESC: ""
+ xiongnu_missions_01_task_2_DESC: ""
 
  xiongnu_missions_01_task_3: "Touman's Tribe"
- xiongnu_missions_01_DESC: ""
+ xiongnu_missions_01_task_3_DESC: ""
 
  xiongnu_missions_01_task_4: "Annex Anhou"
- xiongnu_missions_01_DESC: ""
+ xiongnu_missions_01_task_4_DESC: ""
 
  xiongnu_missions_01_task_5: "Dominate Dingling"
- xiongnu_missions_01_DESC: ""
+ xiongnu_missions_01_task_5_DESC: ""
 
  xiongnu_missions_01_task_6: "Western Warmongering"
- xiongnu_missions_01_DESC: ""
+ xiongnu_missions_01_task_6_DESC: ""
 
  xiongnu_missions_01_task_7: "Hoarding Horses"
- xiongnu_missions_01_DESC: ""
+ xiongnu_missions_01_task_7_DESC: ""
 
  xiongnu_missions_01_task_8: "Steppe Stirrups"
- xiongnu_missions_01_DESC: ""
+ xiongnu_missions_01_task_8_DESC: ""
 
  xiongnu_missions_01_task_9: "Prairies and Pastures"
- xiongnu_missions_01_DESC: ""
+ xiongnu_missions_01_task_9_DESC: ""
 
  xiongnu_missions_01_task_10: "Foreign Tribute"
- xiongnu_missions_01_DESC: ""
+ xiongnu_missions_01_task_10_DESC: ""
 
  xiongnu_missions_01_task_11: "Capital Breeding Grounds"
- xiongnu_missions_01_DESC: ""
+ xiongnu_missions_01_task_11_DESC: ""
 
  xiongnu_missions_01_task_12: "Southern Insults"
- xiongnu_missions_01_DESC: ""
+ xiongnu_missions_01_task_12_DESC: ""
 
  xiongnu_missions_01_task_13: "Chanyu's Children"
- xiongnu_missions_01_DESC: ""
+ xiongnu_missions_01_task_13_DESC: ""
 
  xiongnu_missions_01_task_14: "The Mighty Modun"
- xiongnu_missions_01_DESC: ""
+ xiongnu_missions_01_task_14_DESC: ""
 
  xiongnu_missions_01_task_15: "Hollow Out Hujie"
- xiongnu_missions_01_DESC: ""
+ xiongnu_missions_01_task_15_DESC: ""
 
  xiongnu_missions_01_task_16: "Jumping Jiankun"
- xiongnu_missions_01_DESC: ""
+ xiongnu_missions_01_task_16_DESC: ""
 
  xiongnu_missions_01_task_17: "Control Gobi"
- xiongnu_missions_01_DESC: ""
+ xiongnu_missions_01_task_17_DESC: ""
 
  xiongnu_missions_01_task_18: "Ordos Expedition"
- xiongnu_missions_01_DESC: ""
+ xiongnu_missions_01_task_18_DESC: ""
 
  xiongnu_missions_01_task_19: "Warn Wusun"
- xiongnu_missions_01_DESC: ""
+ xiongnu_missions_01_task_19_DESC: ""
 
  xiongnu_missions_01_task_20: "Rise of the New Chanyu"
- xiongnu_missions_01_DESC: ""
+ xiongnu_missions_01_task_20_DESC: ""
 
 
  #Events 
@@ -124,6 +124,22 @@
  me_xiongnu_01_14_title: ""
  me_xiongnu_01_14_desc: ""
  me_xiongnu_01_14.a: ""
+ 
+ me_xiongnu_01_1400_title: ""
+ me_xiongnu_01_1400_desc: ""
+ me_xiongnu_01_1400.a: ""
+ 
+ me_xiongnu_01_1401_title: ""
+ me_xiongnu_01_1401_desc: ""
+ me_xiongnu_01_1401.a: ""
+ 
+ me_xiongnu_01_1402_title: ""
+ me_xiongnu_01_1402_desc: ""
+ me_xiongnu_01_1402.a: ""
+ 
+ me_xiongnu_01_1403_title: ""
+ me_xiongnu_01_1403_desc: ""
+ me_xiongnu_01_1403.a: ""
 
  me_xiongnu_01_15_title: ""
  me_xiongnu_01_15_desc: ""
@@ -140,6 +156,18 @@
  me_xiongnu_01_18_title: ""
  me_xiongnu_01_18_desc: ""
  me_xiongnu_01_18.a: ""
+ 
+ me_xiongnu_01_1800_title: ""
+ me_xiongnu_01_1800_desc: ""
+ me_xiongnu_01_1800.a: ""
+ 
+ me_xiongnu_01_1801_title: ""
+ me_xiongnu_01_1801_desc: ""
+ me_xiongnu_01_1801.a: ""
+ 
+ me_xiongnu_01_1802_title: ""
+ me_xiongnu_01_1802_desc: ""
+ me_xiongnu_01_1802.a: ""
 
  me_xiongnu_01_19_title: ""
  me_xiongnu_01_19_desc: ""
@@ -179,7 +207,7 @@
  
  #Bloodline
  bloodline_xiongnu_luandi: "Blood of Luandi"
- bloodline_xiongnu_luandi_desc: ""
+ bloodline_xiongnu_luandi_desc: "TODO"
  
  #Tooltips
  xiongnu_missions_01_task_1_req: "No great family is scorned."
@@ -195,3 +223,4 @@
  xiongnu_missions_01_task_20_modun_is_ruler: "Modun is ruler."
  xiongnu_missions_01_task_2_tt_family_check: "Our ruler's family is the Luandi family."
  xiongnu_missions_01_task_3_spouse_with_reqs_exists: "Our ruler has a spouse younger than 30 years, who has Xiongnu culture and Tengri religion."
+ xiongnu_missions_01_task_2_claimant: "A new claimant will appear."
