Rest of Han Missions

--- a/localization/english/missions/han_missions_warring_l_english.yml
+++ b/localization/english/missions/han_missions_warring_l_english.yml
@@ -75,6 +75,15 @@
  me_han_warring_4_title: "$me_han_warring_task_4$"
  me_han_warring_4_desc: ""
  me_han_warring_4.a: ""
+ 
+ me_han_warring_400_title: "$me_han_warring_task_4$"
+ me_han_warring_400_desc: ""
+ me_han_warring_400.a: ""
+ 
+ me_han_warring_401_title: "$me_han_warring_task_4$"
+ me_han_warring_401_desc: ""
+ me_han_warring_401.a: ""
+ me_han_warring_401.b: ""
 
  me_han_warring_5_title: "$me_han_warring_task_5$"
  me_han_warring_5_desc: ""
@@ -173,4 +182,6 @@
  desc_han_capital_mod: "TODO"
  desc_zhengguo_canal_mod: "TODO"
  desc_han_feizi_mod: "TODO"
+ coalition_han_bonus: "Coalition led by Han"
+ coalition_han_against_qin: "Coalition against Qin"
 
