--- a/localization/english/00_TODO_l_english.yml
+++ b/localization/english/00_TODO_l_english.yml
@@ -309,10 +309,12 @@ phnom_start:0 "#T Phnom#!\nDifficulty: #Y Medium#!\n\nAt the tip of the Mekong D
 
 zhao_start: "#T Zhao#!\nDifficulty: #Y Medium#!\n\n$zhao_heritage_desc$"
 yan_start: "#T Yan#!\nDifficulty: #Y Medium#!\n\n$yan_heritage_desc$"
-xiongnu_start: "#T Xiongnu#!\nDifficulty: #Y Medium#!\n\n TODO Zorgo2coopius"
-nam_cuong_start: "#T Nam Cuong#!\nDifficulty: #Y Medium#!\n\n TODO Zorgo2coopius"
+xiongnu_start: "#T Xiongnu#!\nDifficulty: #Y Medium#!\n\n$xiongnu_heritage_desc$"
+nam_cuong_start: "#T Nam Cuong#!\nDifficulty: #Y Medium#!\n\n$xiou_heritage_desc$"
 sushen_start: "#T Sushen#!\nDifficulty: #Y Medium#!\n\n$sushen_heritage_desc$"
 wei_start: "#T Wei#!\nDifficulty: #Y Medium#!\n\n$wei_heritage_desc$"
+han_start: "#T Han#!\nDifficulty: #Y Medium#!\n\n$han_heritage_desc$"
+song_start: "#T Song#!\nDifficulty: #Y Medium#!\n\n$song_heritage_desc$"
 
 #AOS GOVERNMENTS
 chinese_empire:0 "Chinese Empire"
