--- a/localization/english/missions/jomon_missions_l_english.yml
+++ b/localization/english/missions/jomon_missions_l_english.yml
@@ -1,18 +1,10 @@
 ﻿l_english:
 
+## EZO ##
  ezo_missions:0 "Heights of #E Hokkaido#!"
  ezo_missions_DESCRIPTION:0 "The [SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|Y] people are split into three clans. The #E Esan#!, the #E Ebetsu#!, and the #E Kitami#!. In the #E Jomon Jidai#!, these tribes would form one of many [GetCulture('dewa').GetCultureGroup.GetName|Y] cultural spheres, sharing many aspects of culture other than simply being [GetCulture('dewa').GetCultureGroup.GetName|Y].\n\nBy the end of the #E Epi-Jomon Jidai#! of the #E 3rd - 7th centuries BCE#!, the people of #E Hokkaido#! would remain the last of the [GetCulture('dewa').GetCultureGroup.GetName|Y], eventually combining with the #Y Sakhalin#! people in the 12th century to create what we now know as #Y Ainu#! culture."
  ezo_missions_CRITERIA_DESCRIPTION:0 "This mission will be completed when the [SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|Y] have united under one grand banner."
  ezo_missions_BUTTON_TOOLTIP:0 "The #E Ezo#! will rise like Mount Asahi!"
-
- emishi_missions:0 "Trouble in #E Tohoku#!"
- emishi_missions_DESCRIPTION:0 "The [GetCulture('dewa').GetCultureGroup.GetName|Y] of #E Honshu#! have been pushed entirely into the #E Tohokuku#! area of northern #E Honshu#!."
- emishi_missions_CRITERIA_DESCRIPTION:0 "This mission will be completed when the [SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|Y] have united the [GetCulture('dewa').GetCultureGroup.GetName|Y] of #E Tohoku#!."
- emishi_missions_BUTTON_TOOLTIP:0 "The Kamuy will lead the [SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|Y] to victory!"
-
- jomon_missions_DESCRIPTION:0 "While this era is typically defined by the #E Yayoi Jidai#!, the #E Epi-Jomon Jidai#! , also called the #E Zoku-Jomon Jidai#!, coincides with it. From #E 300BCE - 700CE#!, the long process of #E Yayoification #! of [GetProvince('(int32)9328').GetArea.GetRegion.GetName|E] would continue until the #E Nara Jidai#! in #E 700 CE#!,  leaving only the #E Zoku-Jomon#! of #E Hokkaido#! left.\n\nHowever, history can be diverted if the [SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|Y] can come together and reforge fate... yet in pursuit of  avoiding the fate of a [GetCulture('wa').GetCultureGroup.GetName|Y] [GetProvince('(int32)9328').GetArea.GetRegion.GetName|E], we may only prove to #R accelerate#! it."
- jomon_missions_CRITERIA_DESCRIPTION:0 "This mission will be completed when the [SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|Y] have established a state capable of competing against the [GetCulture('wa').GetCultureGroup.GetName|Y]."
- jomon_missions_BUTTON_TOOLTIP:0 "Write a new chapter in history."
 
 #Missions
  ezo_missions_task_1:0 "Horizons of Hokkaido"
@@ -62,50 +54,6 @@
 
  ezo_missions_task_17:0 "Ai Only Unification"
  ezo_missions_task_17_DESC:0 "#R if you're seeing this ur either a cheater, observer, or something has gone horribly wrong.#!"
-
-
- emishi_missions_task_1:0 ""
- emishi_missions_task_1_DESC:0 ""
-
- emishi_missions_task_2:0 ""
- emishi_missions_task_2_DESC:0 ""
-
- emishi_missions_task_3:0 ""
- emishi_missions_task_3_DESC:0 ""
-
- emishi_missions_task_4:0 ""
- emishi_missions_task_4_DESC:0 ""
-
- emishi_missions_task_5:0 ""
- emishi_missions_task_5_DESC:0 ""
-
- emishi_missions_task_6:0 ""
- emishi_missions_task_6_DESC:0 ""
-
- emishi_missions_task_7:0 ""
- emishi_missions_task_7_DESC:0 ""
-
- emishi_missions_task_8:0 ""
- emishi_missions_task_8_DESC:0 ""
-
- emishi_missions_task_9:0 ""
- emishi_missions_task_9_DESC:0 ""
-
- emishi_missions_task_10:0 ""
- emishi_missions_task_10_DESC:0 ""
-
- emishi_missions_task_11:0 ""
- emishi_missions_task_11_DESC:0 ""
-
- emishi_missions_task_12:0 ""
- emishi_missions_task_12_DESC:0 ""
-
- emishi_missions_task_13:0 ""
- emishi_missions_task_13_DESC:0 ""
-
- emishi_missions_task_14:0 ""
- emishi_missions_task_14_DESC:0 ""
-
 
 #Tooltips
  claims_on_hokkaido_tt:0 "#E [SCOPE.GetRootScope.GetCountry.GetName|Y]#! gains claims on the [GetProvince('(int32) 10567').GetArea.GetName|Y] area."
@@ -273,6 +221,61 @@
  me_ezo_16.a:0 "The Ezo will save Jomon!"
  me_ezo_16_tooltip:0 "The mission tree '#Y Heights of Hokkaido#!' has now been #G Completed#!!"
 
+ ## EMISHI ##
+ emishi_missions:0 "Trouble in #E Tohoku#!"
+ emishi_missions_DESCRIPTION:0 "The [GetCulture('dewa').GetCultureGroup.GetName|Y] of #E Honshu#! have been pushed entirely into the #E Tohokuku#! area of northern #E Honshu#!."
+ emishi_missions_CRITERIA_DESCRIPTION:0 "This mission will be completed when the [SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|Y] have united the [GetCulture('dewa').GetCultureGroup.GetName|Y] of #E Tohoku#!."
+ emishi_missions_BUTTON_TOOLTIP:0 "The Kamuy will lead the [SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|Y] to victory!"
+
+ emishi_missions_task_1:0 "Fun of Hit and Run"
+ emishi_missions_task_1_DESC:0 "The #E Dewa#! people were infamous to the #E Yayoi#! they bordered. They specialized in #Y Hit and Run#! tactics unlike anything else the #E Yayoi#! would have to deal with. We will have to make use of this signature of ours if we want to survive the never-ending expanse of #E Yayoi#! culture."
+
+ emishi_missions_task_2:0 "Secrets of Rice"
+ emishi_missions_task_2_DESC:0 "#Y Rice#! is typically associated with the #E Yayoi#!... except for the crafty #E Jomon#! known as the #E Sunazawa#!. The #E Sunazawa#! had adopted the signature #Y Rice#! cultivation of the #E Yayoi#! as early as 340 BCE! The power of #Y Rice#! was a major factor in the eventual success of the #E Yayoi#! and the eventual decline of the #E Jomon#!. We will turn the #E Yayoi's#!# greatest tool against them."
+
+ emishi_missions_task_3:0 "Merchants by Day, Migrants by Night"
+ emishi_missions_task_3_DESC:0 "The #E Sirakawa#! people would escape the every-growing #E Yayoi#! culture by migrating away towards #E Hokkaido#!. Meanwhile, they would focus on trading with their #E Jomon#! relatives to the north. Naturally, this trade incentive would only further draw them northward up the coast toawards #E Hokkaido#!."
+
+ emishi_missions_task_4:0 "Threats in Tohoku"
+ emishi_missions_task_4_DESC:0 ""
+
+ emishi_missions_task_5:0 "Jomon Infighting"
+ emishi_missions_task_5_DESC:0 ""
+
+ emishi_missions_task_6:0 "Yayoi Cultural War"
+ emishi_missions_task_6_DESC:0 ""
+
+ emishi_missions_task_7:0 "Colonize the West"
+ emishi_missions_task_7_DESC:0 ""
+
+ emishi_missions_task_8:0 "Claim Hokkaido"
+ emishi_missions_task_8_DESC:0 ""
+
+ emishi_missions_task_9:0 "Cooking in Kotaku"
+ emishi_missions_task_9_DESC:0 ""
+
+ emishi_missions_task_10:0 ""
+ emishi_missions_task_10_DESC:0 ""
+
+ emishi_missions_task_11:0 ""
+ emishi_missions_task_11_DESC:0 ""
+
+ emishi_missions_task_12:0 ""
+ emishi_missions_task_12_DESC:0 ""
+
+ emishi_missions_task_13:0 ""
+ emishi_missions_task_13_DESC:0 ""
+
+ emishi_missions_task_14:0 ""
+ emishi_missions_task_14_DESC:0 ""
+
+#Tooltips
+
+#Modifiers
+
+#Decisions
+
+#Others
  
  me_emishi_1_title:0 ""
  me_emishi_1_desc:0 ""
@@ -343,3 +346,21 @@
  me_emishi_14_desc:0 ""
  me_emishi_14.a:0 ""
  me_emishi_14_tooltip:0 "The mission task '#Y $emishi_missions_task_14$#!' has now been #G Completed#!!"
+
+
+## JOMON ##
+ jomon_missions_DESCRIPTION:0 "While this era is typically defined by the #E Yayoi Jidai#!, the #E Epi-Jomon Jidai#! , also called the #E Zoku-Jomon Jidai#!, coincides with it. From #E 300BCE - 700CE#!, the long process of #E Yayoification #! of [GetProvince('(int32)9328').GetArea.GetRegion.GetName|E] would continue until the #E Nara Jidai#! in #E 700 CE#!,  leaving only the #E Zoku-Jomon#! of #E Hokkaido#! left.\n\nHowever, history can be diverted if the [SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|Y] can come together and reforge fate... yet in pursuit of  avoiding the fate of a [GetCulture('wa').GetCultureGroup.GetName|Y] [GetProvince('(int32)9328').GetArea.GetRegion.GetName|E], we may only prove to #R accelerate#! it."
+ jomon_missions_CRITERIA_DESCRIPTION:0 "This mission will be completed when the [SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|Y] have established a state capable of competing against the [GetCulture('wa').GetCultureGroup.GetName|Y]."
+ jomon_missions_BUTTON_TOOLTIP:0 "Write a new chapter in history."
+
+#Missions
+
+#Tooltips
+
+#Modifiers
+
+#Decisions
+
+#Others
+
+#Events
