--- a/localization/english/missions/yan_missions_l_english.yml
+++ b/localization/english/missions/yan_missions_l_english.yml
@@ -7,62 +7,62 @@
 
  #Missions
 
- yan_missions_task_1:0 "Promote Guo Wei"
- yan_missions_DESC:0 ""
+ yan_missions_task_1: "Promote Guo Wei"
+ yan_missions_task_1_DESC: "If [ROOT.GetCountry.GetName] has any hopes of becoming a mighty nation, one that is both respected and feared by our rivals, then we must be guided by ministers with vision, men of bold action - we cannot afford to allow advisors of weak character to assume positions of power.\n\nThankfully, there are those who are willing to give their lives in service to the people, and Guo Wei is one of them.\n\n\n\n\n\n\n\n\n\n\n@tibet_mil8!"
 
- yan_missions_task_2:0 "Rebuild Southern Yan"
- yan_missions_DESC:0 ""
+ yan_missions_task_2: "Rebuild Southern Yan"
+ yan_missions_task_2_DESC: "The land that borders our enemies to the south has seen its fair share of calamities, but the time has come for us to focus our resources on rebuilding; there is much that we could do to improve our infrastructure in this war-devastated region.\n\n\n\n\n\n\n\n\n\n\n@china_mil11!"
 
- yan_missions_task_3:0 "A Prized Hostage"
- yan_missions_DESC:0 ""
+ yan_missions_task_3: "A Prized Hostage"
+ yan_missions_task_3_DESC: "My [ROOT.GetCountry.GetRulerTitle], the most miraculous thing has happened; a Yan general that was sent to the lands of the #E Dongyu#! as a hostage has escaped the clutches of those barbarians, returning to [ROOT.GetCountry.GetCapital.GetName] with valuable information about our enemies and their way of life. \n\n\n\n\n\n\n\n\n\n\n@east_steppemil8!"
 
- yan_missions_task_4:0 "Recruit Foreign Talents"
- yan_missions_DESC:0 ""
+ yan_missions_task_4: "Recruit Foreign Talents"
+ yan_missions_task_4_DESC: "We must send out word far and wide that the Royal Court in [ROOT.GetCountry.GetCapital.GetName] has need for men of talent - our [ROOT.GetCountry.GetRulerTitle] will pay the salaries for those willing to come serve the people of [ROOT.GetCountry.GetName].\n\n\n\n\n\n\n\n\n\n\n@china_mil6!"
 
- yan_missions_task_5:0 "Anti-Qi Alliance"
- yan_missions_DESC:0 ""
+ yan_missions_task_5: "Anti-Qi Alliance"
+ yan_missions_task_5_DESC: "We cannot defeat the [GetCountry('QII').GetName] by ourselves, and we will not even make the attempt unless we have allies- we need friends that will have our backs when the time for war is at hand.\n\n\n\n\n\n\n\n\n\n\n@china_mil4!"
 
- yan_missions_task_6:0 "Iron and Bronze Metallurgy"
- yan_missions_DESC:0 ""
+ yan_missions_task_6: "Iron and Bronze Metallurgy"
+ yan_missions_task_6_DESC: "While we have iron and bronze available to us in the mountains, it will be of no use to our blacksmiths unless we have built mines - our hungry nation has need of these valuable metals.\n\n\n\n\n\n\n\n\n\n\n@india_mil6!"
 
- yan_missions_task_7:0 "By Ji"
- yan_missions_DESC:0 ""
+ yan_missions_task_7: "By Ji"
+ yan_missions_task_7_DESC: "The beautiful city of #E Ji#! stands above all others and yet there is room for the growth of our fair capital - it could become the greatest metropolis in all of the Middle Kingdom, especially if guided by one with vision. \n\n\n\n\n\n\n\n\n\n\n@china_mil12!"
 
- yan_missions_task_8:0 "Defeat Donghu"
- yan_missions_DESC:0 ""
+ yan_missions_task_8: "Defeat Donghu"
+ yan_missions_task_8_DESC: "The savage tribes of [GetCountry('DGH').GetName] have sent their raiding parties into our hills and forests for the last time - [ROOT.GetCountry.GetRuler.GetName] will put an end to these barbarians once and for all.\n\n\n\n\n\n\n\n\n\n\n@east_steppemil7!"
 
- yan_missions_task_9:0 "Defend Against Zhao"
- yan_missions_DESC:0 ""
+ yan_missions_task_9: "Defend Against Zhao"
+ yan_missions_task_9_DESC: "The kingdom of [GetCountry('ZHA').GetName] has long been a thorn in the side of our people; an intractable enemy that we can never afford to ignore, lest they take advantage of any situation that they can exploit. Let us build fortresses that will serve as the first line of defense against our rivals.\n\n\n\n\n\n\n\n\n\n\n@greek_mil1!"
 
- yan_missions_task_10:0 "Quell Qi"
- yan_missions_DESC:0 ""
+ yan_missions_task_10: "Quell Qi"
+ yan_missions_task_10_DESC: "The rich cities of [GetCountry('QII').GetName] are seductively calling out to our levies, who are desperate to plunder the homes of the soft southerners. Once we have defeated their armies, we shall unleash our forces against the heartlands of Qi, allowing them to gorge themselves until their bellies are full. \n\n\n\n\n\n\n\n\n\n\n@china_mil3!"
 
- yan_missions_task_11:0 "Royal Bronzeware"
- yan_missions_DESC:0 ""
+ yan_missions_task_11: "Royal Bronzeware"
+ yan_missions_task_11_DESC: "Now that we have the financial means to do so, we should commission bronzes that reflect the status of the House of [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective], the greatest rulers of [ROOT.GetCountry.GetName] to have ever sat upon its jeweled throne.\n\n\n\n\n\n\n\n\n\n\n@tibet_mil12!"
 
- yan_missions_task_12:0 "Seize Joseon"
- yan_missions_DESC:0 ""
+ yan_missions_task_12: "Seize Joseon"
+ yan_missions_task_12_DESC: "Now that the strength of [ROOT.GetCountry.GetName] is resurgent, let us push to the east and seize as much of [GetCountry('JSN').GetName] as we can. We have reason to believe that the barbarians will crumble before our victorious forces - the gods have given their lands over to us!\n\n\n\n\n\n\n\n\n\n\n@china_mil1!"
 
- yan_missions_task_13:0 "Push Back Zhao"
- yan_missions_DESC:0 ""
+ yan_missions_task_13: "Push Back Zhao"
+ yan_missions_task_13_DESC: "In our hearts, we know that we will never be able to peacefully live alongside [GetCountry('ZHA').GetName] - our people will only be safe once their menacing levies are pushed far back from our borders.\n\n\n\n\n\n\n\n\n\n\n@china_mil7!"
 
- yan_missions_task_14:0 "Treasures of Qi"
- yan_missions_DESC:0 ""
+ yan_missions_task_14: "Treasures of Qi"
+ yan_missions_task_14_DESC: "Some people repeat the foolish story that [GetProvince('(int32)8504').GetName], once the capital of the [GetCountry('QII').GetName], is the greatest city in the world, surpassing even our [ROOT.GetCountry.GetCapital.GetName] in glory and prestige. These wagging tongues will be silenced, however, once they hear that we have taken the most valuable treasures of Qi for ourselves.\n\n\n\n\n\n\n\n\n\n\n@egypt_mil19!"
 
- yan_missions_task_15:0 "March South"
- yan_missions_DESC:0 ""
+ yan_missions_task_15: "March South"
+ yan_missions_task_15_DESC: "Now that the heartlands of [GetCountry('QII').GetName] have fallen into our hands, then there is not much preventing us from further expanding to our south - command our soldiers to march for the capitals of our enemies!\n\n\n\n\n\n\n\n\n\n\n@east_steppemil2!"
 
- yan_missions_task_16:0 "Maritime Trade"
- yan_missions_DESC:0 ""
+ yan_missions_task_16: "Maritime Trade"
+ yan_missions_task_16_DESC: "There is potential in the province of [GetProvince('(int32)8724').GetName] that [ROOT.GetCountry.GetRuler.GetName] has seen, and the [ROOT.GetCountry.GetRulerTitle] has declared that this region will become the home to a magnificent port, one that shall control maritime trade in the region.\n\n\n\n\n\n\n\n\n\n\n@china_mil8!"
 
- yan_missions_task_17:0 "Northern Wall"
- yan_missions_DESC:0 ""
+ yan_missions_task_17: "Northern Wall"
+ yan_missions_task_17_DESC: "In order to safeguard our hard-won possessions from the threat of northern steppe barbarians, we have decided to expand our network of fortifications. \n\n\n\n\n\n\n\n\n\n\n@china_mil14!"
 
- yan_missions_task_18:0 "Jin Puppets"
- yan_missions_DESC:0 ""
+ yan_missions_task_18: "Jin Puppets"
+ yan_missions_task_18_DESC: "[ROOT.GetCountry.GetRuler.GetName] is said to have [ROOT.GetCountry.GetRuler.GetHerHis] fingers pulling many strings, with spies and informers all throughout [ROOT.GetCountry.GetName] sending clandestine messages back to [ROOT.GetCountry.GetCapital.GetName].\n\n\n\n\n\n\n\n\n\n\n@china_mil9!"
 
- yan_missions_task_19:0 "The Emperor and the Assassin"
- yan_missions_DESC:0 ""
+ yan_missions_task_19: "The Emperor and the Assassin"
+ yan_missions_task_19_DESC: "Our [ROOT.GetCountry.GetRulerTitle] is not afraid to utilize any means at [ROOT.GetCountry.GetRuler.GetHerHis] disposal to achieve [ROOT.GetCountry.GetRuler.GetHerHis] political goals, especially when it comes to protecting the people of [ROOT.GetCountry.GetName].\n\n#Y This will start an event chain.#!\n\n\n\n\n\n\n\n\n\n\n@china_mil15!"
 
 
  #Events
