Rest of Imperial Missions (except add_mandate)

--- a/localization/english/missions/chinese_empire_missions_l_english.yml
+++ b/localization/english/missions/chinese_empire_missions_l_english.yml
@@ -121,10 +121,39 @@
  me_chinese_empire_1000_title:0 "$missions_chinese_empire_task_10$"
  me_chinese_empire_1000_desc:0 ""
  me_chinese_empire_1000.a:0 ""
+ 
+ me_chinese_empire_1001_title:0 "$missions_chinese_empire_task_10$"
+ me_chinese_empire_1001_desc:0 ""
+ me_chinese_empire_1001.a:0 ""
+ 
+ me_chinese_empire_1002_title:0 "$missions_chinese_empire_task_10$"
+ me_chinese_empire_1002_desc:0 ""
+ me_chinese_empire_1002.a:0 ""
+ 
+ me_chinese_empire_1003_title:0 "$missions_chinese_empire_task_10$"
+ me_chinese_empire_1003_desc:0 ""
+ me_chinese_empire_1003.a:0 ""
+ 
+ me_chinese_empire_1004_title:0 "$missions_chinese_empire_task_10$"
+ me_chinese_empire_1004_desc:0 ""
+ me_chinese_empire_1004.a:0 ""
 
  me_chinese_empire_11_title:0 "$missions_chinese_empire_task_11$"
  me_chinese_empire_11_desc:0 ""
  me_chinese_empire_11.a:0 ""
+ 
+ me_chinese_empire_1100_title:0 "$missions_chinese_empire_task_11$"
+ me_chinese_empire_1100_desc:0 ""
+ me_chinese_empire_1100.a:0 ""
+ me_chinese_empire_1100.b:0 ""
+ 
+ me_chinese_empire_1101_title:0 "$missions_chinese_empire_task_11$"
+ me_chinese_empire_1101_desc:0 ""
+ me_chinese_empire_1101.a:0 ""
+ 
+ me_chinese_empire_1102_title:0 "$missions_chinese_empire_task_11$"
+ me_chinese_empire_1102_desc:0 ""
+ me_chinese_empire_1102.a:0 ""
 
  me_chinese_empire_12_title:0 "$missions_chinese_empire_task_12$"
  me_chinese_empire_12_desc:0 ""
@@ -178,6 +207,10 @@
  me_chinese_empire_23_title:0 "$missions_chinese_empire_task_23$"
  me_chinese_empire_23_desc:0 ""
  me_chinese_empire_23.a:0 ""
+ 
+ me_chinese_empire_90_title:0 ""
+ me_chinese_empire_90_desc:0 ""
+ me_chinese_empire_90.a:0 ""
 
  #Tooltips
  missions_chinese_empire_task_15_10_slave_estates_on_salt: "We have at least 10 provinces with a slave estate and with the salt trade good."
@@ -209,10 +242,18 @@
  missions_chinese_empire_task_6_thirty_pops_appear_in_jiao: "The Region of Jiao will be colonized."
  missions_chinese_empire_task_11_send_envoys_to_get_horses: "We will send envoys to get access to the Heavenly Horses."
  missions_chinese_empire_task_10_terracotta_army: "We will build a mausoleum protected by the Terracotta Army."
+ me_chinese_empire_90_use_mandate_mechanic: "We will have to use the Mandate Mechanics to complete this tree." #Zorgo please colour the text, might also add it in the event text
  
  #Treasures
  flying_horse_china: "Flying Horse Statue"
  flying_horse_china_desc: "TODO"
+ 
+ #Terracotta  Army
+ terracotta_army_wonder: "Mausoleum of the first Emperor"
+ desc_terracotta_army_wonder: "TODO MOD"
+ terracotta_army_mod: "$terracotta_army_wonder$"
+ desc_terracotta_army_mod: "$desc_terracotta_army_wonder$"
+ missions_chinese_empire_task_10_first_emperor_dead: "The first Emperor of China has died."
  
  #Modifiers
  restored_wall_empire_missions: "Great Wall"
