--- a/localization/english/00_TODO_l_english.yml
+++ b/localization/english/00_TODO_l_english.yml
@@ -315,6 +315,7 @@ sushen_start: "#T Sushen#!\nDifficulty: #Y Medium#!\n\n$sushen_heritage_desc$"
 wei_start: "#T Wei#!\nDifficulty: #Y Medium#!\n\n$wei_heritage_desc$"
 han_start: "#T Han#!\nDifficulty: #Y Medium#!\n\n$han_heritage_desc$"
 song_start: "#T Song#!\nDifficulty: #Y Medium#!\n\n$song_heritage_desc$"
+jingug_start: "#T Jingug#!\nDifficulty: #Y Medium#!\n\n$jingug_heritage_desc$"
 
 #AOS GOVERNMENTS
 chinese_empire:0 "Chinese Empire"
