Half of Yan event pics and loc

--- a/localization/english/missions/yan_missions_l_english.yml
+++ b/localization/english/missions/yan_missions_l_english.yml
@@ -14,7 +14,7 @@
  yan_missions_task_2_DESC: "The land that borders our enemies to the south has seen its fair share of calamities, but the time has come for us to focus our resources on rebuilding; there is much that we could do to improve our infrastructure in this war-devastated region.\n\n\n\n\n\n\n\n\n\n\n@china_mil11!"
 
  yan_missions_task_3: "A Prized Hostage"
- yan_missions_task_3_DESC: "My [ROOT.GetCountry.GetRulerTitle], the most miraculous thing has happened; a Yan general that was sent to the lands of the #E Dongyu#! as a hostage has escaped the clutches of those barbarians, returning to [ROOT.GetCountry.GetCapital.GetName] with valuable information about our enemies and their way of life. \n\n\n\n\n\n\n\n\n\n\n@east_steppemil8!"
+ yan_missions_task_3_DESC: "My [ROOT.GetCountry.GetRulerTitle], the most miraculous thing has happened; a Yan general that was sent to the lands of the #E Donghu#! as a hostage has escaped the clutches of those barbarians, returning to [ROOT.GetCountry.GetCapital.GetName] with valuable information about our enemies and their way of life. \n\n\n\n\n\n\n\n\n\n\n@east_steppemil8!"
 
  yan_missions_task_4: "Recruit Foreign Talents"
  yan_missions_task_4_DESC: "We must send out word far and wide that the Royal Court in [ROOT.GetCountry.GetCapital.GetName] has need for men of talent - our [ROOT.GetCountry.GetRulerTitle] will pay the salaries for those willing to come serve the people of [ROOT.GetCountry.GetName].\n\n\n\n\n\n\n\n\n\n\n@china_mil6!"
@@ -66,53 +66,53 @@
 
 
  #Events
- me_yan_1_title:0 "$yan_missions_task_1$"
- me_yan_1_desc:0 ""
- me_yan_1.a:0 ""
+ me_yan_1_title: "$yan_missions_task_1$"
+ me_yan_1_desc: "Although many advisors had hoped to catch the ear of [ROOT.GetCountry.GetRuler.GetName], the [ROOT.GetCountry.GetAdjective] [ROOT.GetCountry.GetRulerTitle] was not interested in the fawning words of sycophants that would tell [ROOT.GetCountry.GetRuler.GetHerHim] everything that [ROOT.GetCountry.GetRuler.GetSheHe] wanted to hear. Only the honest word of a true servant would suffice, and yet everyone standing before the throne only sought to enrich themselves or change their status at court.\n\nAfter many hours of listening to the speeches of fools, [ROOT.GetCountry.GetRuler.GetFirstName] called forth #E Wei Guo#! to stand before the throne, asking the minister what was the best step forward for [ROOT.GetCountry.GetName].\n\n'Seek the counsel of learned men first and let it be known that you value knowledge, and sages far wiser than I shall appear at your doorstep'."
+ me_yan_1.a: "I hope what you say is true, [SCOPE.sCharacter('guo_character').GetFirstName]..."
 
- me_yan_2_title:0 "$yan_missions_task_2$"
- me_yan_2_desc:0 ""
- me_yan_2.a:0 ""
+ me_yan_2_title: "$yan_missions_task_2$"
+ me_yan_2_desc: "We have received word, o [ROOT.GetCountry.GetRuler.GetName], that the infrastructure projects that we have undertaken in the west have come to fruition. Everyone passing through these regions proclaim that good times have returned to [ROOT.GetCountry.GetName] and that the gods have blessed the [ROOT.GetCountry.GetRulerTitle]. Surely our prosperity is a sign of things to come!"
+ me_yan_2.a: "This is most auspicious news, indeed"
 
- me_yan_3_title:0 "$yan_missions_task_3$"
- me_yan_3_desc:0 ""
- me_yan_3.a:0 ""
+ me_yan_3_title: "$yan_missions_task_3$"
+ me_yan_3_desc: "A story so incredible that it defies belief has been making the rounds in [ROOT.GetCountry.GetCapital.GetName], and [ROOT.GetCountry.GetRuler.GetName], determined to discover what the truth is, has finally managed to get to the bottom of everything, and what they say is true!\n\nYears ago, there was a [ROOT.GetCountry.GetAdjective] warrior named #E Kai Qin#! that was sent as a hostage to a tribe of the [GetCountry('DGH').GetName], and it was widely believed that Kai would never return home, for the Donghu are a people without honor - they regularly violate their oaths, and yet we had no choice at the time. Kai was forced to leave all that he knew to become the thrall of a barbarian warlord - truly, a miserable fate.\n\nAnd yet it appears that Kai managed to escape his captors after many years wandering the steppes and the badlands in the north, and he has returned to his country with intimate knowledge of the lands of our enemies. Upon returning to [ROOT.GetCountry.GetName], Kai went home to visit his family, but the command of [ROOT.GetCountry.GetRuler.GetFirstName] brought the escapee to [ROOT.GetCountry.GetCapital.GetName]."
+ me_yan_3.a: "I want detailed maps of everything that Kai Qin has seen"
 
- me_yan_4_title:0 "$yan_missions_task_4$"
- me_yan_4_desc:0 ""
- me_yan_4.a:0 ""
+ me_yan_4_title: "$yan_missions_task_4$"
+ me_yan_4_desc: "[ROOT.GetCountry.GetRuler.GetName] knew that the famous warlord #E Ju Xin#! was heading for [ROOT.GetCountry.GetCapital.GetName] long before the warrior reached the city gates, for word traveled quickly along the highways and roads of [ROOT.GetCountry.GetName] of the general's passing.\n\nIt came as a relief to hear that this esteemed tactician was there to lend his services to the [ROOT.GetCountry.GetAdjective] [ROOT.GetCountry.GetRulerTitle], for there were murmurings that some calamity was accompanying this deadly soldier."
+ me_yan_4.a: "May victory ride with you, Ju Xin, and with us"
  
- me_yan_400_title:0 "$yan_missions_task_4$"
- me_yan_400_desc:0 ""
- me_yan_400.a:0 ""
+ me_yan_400_title: "$yan_missions_task_4$"
+ me_yan_400_desc: "Remembering the words of Wei Guo, [ROOT.GetCountry.GetRuler.GetName] sent forth messengers all throughout the cities and crossroads of [ROOT.GetCountry.GetName], proclaiming that the mighty [ROOT.GetCountry.GetAdjective] [ROOT.GetCountry.GetRulerTitle] would pay gold and silver to men of talent that would be willing to serve the state.\n\nIt came as no surprise, then, when a scholar of some renown named #E Yan Zou#! appeared at the gates of [ROOT.GetCountry.GetCapital.GetName], with nothing to his name save the tattered cloak on his back and an empty rice bowl that he carried in both hands.\n\nRaising the bowl above his head, Yan yelled out in a loud voice that he would soon eat at the side of the King, so great was his desire to serve [ROOT.GetCountry.GetRuler.GetFirstName] - he promised to prove himself through hard work and would settle for nothing else than a seat at the royal table."
+ me_yan_400.a: "I have heard your name, Yan Zou...and we shall see about that!"
  
- me_yan_401_title:0 "$yan_missions_task_4$"
- me_yan_401_desc:0 ""
- me_yan_401.a:0 ""
+ me_yan_401_title: "$yan_missions_task_4$"
+ me_yan_401_desc: "As word spread far and wide of [ROOT.GetCountry.GetRuler.GetName]'s interest in recruiting foreign talent, another sage, a philosopher and general named #E Yi Yue#!, made the journey to [ROOT.GetCountry.GetCapital.GetName] to offer his sword to the [ROOT.GetCountry.GetRulerTitle], but with a catch.\n\n'We shall fight if we must, but in my many years of wandering, I have learned that the importance of friendship. [ROOT.GetCountry.GetName] needs allies if we are to triumph in the days ahead, and I promise that I will help to achieve this!'"
+ me_yan_401.a: "'We', eh? I like how you're thinking, though..."
 
- me_yan_5_title:0 "$yan_missions_task_5$"
- me_yan_5_desc:0 ""
- me_yan_5.a:0 ""
+ me_yan_5_title: "$yan_missions_task_5$"
+ me_yan_5_desc: "'My esteemed [ROOT.GetCountry.GetRuler.GetName], do not think that I do not know what you are doing - although you attempt to conceal your hissing, I know you to be a viper, a snake that will be trampled underfoot by the armies of [GetCountry('QII').GetName] and shall one day have its head cut off.'\n\nThus began the message from [GetCountry('QII').GetRuler.GetName], and it only progressively got worse from there - the insults that were heaped at [ROOT.GetCountry.GetRuler.GetFirstName] were unrepeatable in polite society, and the cheeks of the [ROOT.GetCountry.GetRulerTitle] flushed in rage as [ROOT.GetCountry.GetRuler.GetSheHe] listened to the stream of curses.\n\n'Enough!' [ROOT.GetCountry.GetRuler.GetFirstName] barked, rising to [ROOT.GetCountry.GetRuler.GetHerHis] feet. 'If Qi wants war, then they shall have it!'"
+ me_yan_5.a: "How bold of you, to threaten me and my allies in this manner!"
 
- me_yan_6_title:0 "$yan_missions_task_6$"
- me_yan_6_desc:0 ""
- me_yan_6.a:0 ""
+ me_yan_6_title: "$yan_missions_task_6$"
+ me_yan_6_desc: "Our slaves have been working hard in the mines, and yet even their ceaseless, backbreaking labor is barely enough to feed the hungry forges and smiths of the [ROOT.GetCountry.GetAdjective] people.\n\nThe overseers tasked with watching these wretched souls, their coinpurses jingling with silver, continue to push the slaves to their limits, knowing that the need for iron and bronze is only growing."
+ me_yan_6.a: "We have a growing army that we must equip with the finest weaponry"
 
- me_yan_7_title:0 "$yan_missions_task_7$"
- me_yan_7_desc:0 ""
- me_yan_7.a:0 ""
+ me_yan_7_title: "$yan_missions_task_7$"
+ me_yan_7_desc: "[ROOT.GetCountry.GetCapital.GetName], the capital of [ROOT.GetCountry.GetName], is the largest growing region in all of the lands held by the Yan, surpassing its original borders and becoming a metropolis that rivals the greatest cities of the world - what an accomplishment for [ROOT.GetCountry.GetRuler.GetName], who has overseen this unprecedented expansion.\n\nMany travel from afar for the chance to get lost wandering through the cacophony of Ji's commercial districts, or perhaps spending a quiet afternoon in one of its many tea shops, listening to the gurgling waters of a nearby stream as they contemplate the day."
+ me_yan_7.a: "The best days of Ji remain before us, dear citizens...count on it"
 
- me_yan_8_title:0 "$yan_missions_task_8$"
- me_yan_8_desc:0 ""
- me_yan_8.a:0 ""
+ me_yan_8_title: "$yan_missions_task_8$"
+ me_yan_8_desc: "When the levies of [GetCountry('YAN').GetName] first encountered the savages from [GetCountry('DGH').GetName] on the battlefield, it is said that their cowardly forces became so disoriented and confused that they began to attack each other in their rush to escape the armies of [ROOT.GetCountry.GetRuler.GetName], who seized the advantage and pressed our men forward, scattering all resistance.\n\nWhat followed next could be described as slaughter, and now the greedy crows gorge themselves on the flesh of Donghu horses and men."
+ me_yan_8.a: "Ever forward, soldiers of Yan! To victory!"
 
- me_yan_9_title:0 "$yan_missions_task_9$"
- me_yan_9_desc:0 ""
- me_yan_9.a:0 ""
+ me_yan_9_title: "$yan_missions_task_9$"
+ me_yan_9_desc: "Although [ROOT.GetCountry.GetRuler.GetName] would prefer to meet the soldiers of [GetCountry('ZHA').GetName] on the battlefield, the ambitious [ROOT.GetCountry.GetRulerTitle] cannot be everywhere at once, and there oftentimes events in the north and east of [ROOT.GetCountry.GetName] that require [ROOT.GetCountry.GetRuler.GetHerHis] attention.\n\nNot wishing to cede control of the western hinterlands uncontested, [ROOT.GetCountry.GetRuler.GetFirstName] has commanded that fortifications be built in the provinces - the first line of defense against the encroaching Zhao hordes."
+ me_yan_9.a: "We shall not let them cross into our heartlands without a fight!"
 
- me_yan_10_title:0 "$yan_missions_task_10$"
- me_yan_10_desc:0 ""
- me_yan_10.a:0 ""
+ me_yan_10_title: "$yan_missions_task_10$"
+ me_yan_10_desc: "What a dark day for the [GetCountry('QII').GetName] - did the gods see fit to warn their people that their day of judgment was at hand? Where were the prophets, carrying the words of warning upon their lips? But now it is too late, and the mournful song of desolation fills the smoke-filled air of the burning provinces.\n\nThe forces of [GetCountry('YAN').GetName] have cast the treacherous Qi from their core lands - even the legendary city of [GetProvince('(int32)8504').GetName], their pride and joy, has fallen to the Yan armies, who now fly the banner of the House of [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] above its damaged ramparts. The Qi will never be able to recover from such a devastating loss, and their days are truly numbered."
+ me_yan_10.a: "I shall show them no mercy, but shall press on to their doom!"
 
  me_yan_11_title:0 "$yan_missions_task_11$"
  me_yan_11_desc:0 ""
